--- a/plugins/tps/card/components/application/default.htm
+++ b/plugins/tps/card/components/application/default.htm
@@ -5,16 +5,16 @@
 >
     <div>
 
-        <label for="first_name">First Name</label>
-        <input type="text" name="first_name" class="form-control">
-        <p data-validate-for="first_name" class="text-danger"></p>
+        <label for="firstname">First Name</label>
+        <input type="text" name="firstname" class="form-control">
+        <p data-validate-for="firstname" class="text-danger"></p>
     </div>
 
     <div>
-        <label for="last_name">Last Name</label>
-        <input type="text" name="last_name" class="form-control">
+        <label for="lastname">Last Name</label>
+        <input type="text" name="lastname" class="form-control">
 
-        <p data-validate-for="last_name" class="text-danger"></p>
+        <p data-validate-for="lastname" class="text-danger"></p>
     </div>
 
     <div>
@@ -24,9 +24,9 @@
     </div>
 
     <div>
-        <label for="address">Content</label>
+        <label for="address">Address</label>
         <textarea rows="6" cols="20" name="address" class="form-control"></textarea>
-        <p data-validate-for="content"  class="text-danger"></p>
+        <p data-validate-for="address"  class="text-danger"></p>
     </div>
 
     <div>
